favor model 重构
