# handler/like/like.go
@@ -3,11 +3,19 @@ package like
 import (
 	"github.com/gin-gonic/gin"
 	"github.com/Away0x/7yue_api_server/handler"
-			"github.com/Away0x/7yue_api_server/constant/errno"
-	"github.com/Away0x/7yue_api_server/services"
+		"github.com/Away0x/7yue_api_server/constant/errno"
+	"github.com/Away0x/7yue_api_server/model"
 )
 
-// 进行点赞
+// @Summary 进行点赞
+// @Description 进行点赞
+// @Tags Like
+// @Accept  json
+// @Produce  json
+// @Param appkey query string true "令牌: 测试可用 admin 或你自己的 appkey"
+// @Param body body like.LikeBody true "点赞的信息"
+// @Success 200 {object} handler.Response
+// @Router /v1/like [post]
 func Like(c *gin.Context) {
 	// 1. 参数绑定
 	var body LikeBody
@@ -18,7 +26,7 @@ func Like(c *gin.Context) {
 	key := c.MustGet("appkey").(string)
 
 	// 2. 数据库操作
-	if err := services.Like(key, body.ArtId, body.Type); err != nil {
+	if err := model.AddFavor(key, body.ArtId, body.Type); err != nil {
 		handler.SendResponse(c, err, nil)
 		return
 	}
@@ -27,7 +35,15 @@ func Like(c *gin.Context) {
 	handler.SendResponse(c, nil, "ok")
 }
 
-// 取消点赞
+// @Summary 取消点赞
+// @Description 取消点赞
+// @Tags Like
+// @Accept  json
+// @Produce  json
+// @Param appkey query string true "令牌: 测试可用 admin 或你自己的 appkey"
+// @Param body body like.LikeBody true "取消点赞的信息"
+// @Success 200 {object} handler.Response
+// @Router /v1/like/cancel [post]
 func Cancel(c *gin.Context) {
 	// 1. 参数绑定
 	var body LikeBody
@@ -38,7 +54,7 @@ func Cancel(c *gin.Context) {
 	key := c.MustGet("appkey").(string)
 
 	// 2. 数据库操作
-	if err := services.CancelLike(key, body.ArtId, body.Type); err != nil {
+	if err := model.CancelFavor(key, body.ArtId, body.Type); err != nil {
 		handler.SendResponse(c, err, nil)
 		return
 	}
